Fixed spacing between sections. Fixed display issues with portfolio page.

--- a/main.css
+++ b/main.css
@@ -1,7 +1,5 @@
 body {
   background-color: rgb(169, 170, 205);
-  padding: 0;
-  margin: 0;
 }
 a {
   color: white;
@@ -37,7 +35,6 @@ button:hover {
 }
 
 .home-page {
-  margin: 0;
   height: 1000px;
   background-image:url(assets/backgrounds/DarkBackground.jpg);
 }
@@ -48,7 +45,7 @@ button:hover {
   background-image:url(assets/backgrounds/blueBackground.jpg);
 }
 .upper-space {
-  margin-top: 100px;
+  margin-top: 90px;
 }
 img {
   padding: 1px;
@@ -64,15 +61,16 @@ h2 {
   height: 1000px;
   background-image:url(assets/backgrounds/redBackground.jpg);
 }
-.project-container {
-  margin-top: 20px;
-}
-.project-holder {
-  margin: 20px;
-  width: 400px;
-  height: 500px;
-}
 
+.project-holder {
+  margin-left: 20px;
+  margin-bottom: 30px;
+  width: 300px;
+  height: 300px;
+}
+.first-project {
+  margin-left: 150px;
+}
 .contact-page {
   height: 1000px;
   background-color: rgb(8, 71, 91);
